2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (new_formatter): Uncomment 
	line using XSParagraph module.  Don't call XSParagraph::hello.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_hello)
	(xspara_init): Rename.  Specify whether an error occurred in the 
	return value.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Place code in 
	BEGIN block.  Call XSParagraph::init, and on error, replace 
	XSParagraph module with Texinfo::Convert::Paragraph.

	* tp/t/converters_tests.t: Skip
	"at_commands_in_refs_utf8 file_info".

2015-07-24  Karl Berry  <karl@freefriends.org>

	* util/htmlxref.cnf (flex): no mono manual.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/refcard/txirefcard.texi: 'h' for Info tutorial, not 'H'.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Writing a Menu, Command List),
	* doc/refcard/txirefcard.tex: Document @validatemenus.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Nodes): Combine two sentences.  Move advice 
	on not renaming nodes to Node Names.  Remove sentence saying 
	that nodes don't impose a hierarchical structure.
	(@node): Change word "stretch" to "region".  Move remark on how 
	definition of node compares to definition of sections later.  
	Change wording of reference to Node Line Requirements.  Move 
	explanation of use of chapter structuring command earlier.  
	Reword paragraph about formatting for printing.  Move mention of 
	@anchor and cross-references to Nodes.  Move description of 
	optional arguments later in node.
	(makeinfo Pointer Creation): Move section to end of chapter.

2015-07-24  Carlos O'Donell  <carlos@redhat.com> (tiny change)

	* util/htmlxref.cnf (flex): Add entries pointing to
	http://flex.sourceforge.net.

2015-07-24  Arnold D. Robbins     <arnold@skeeve.com>

	* doc/texinfo.texi: Minor updates with respect to name / spelling
	of gawk and TexiWeb Jr.
